Added Telegram bot integration + updated recommender system

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-SPOTIFY_CLIENT_ID=15fa2041da72480dbfb2cbb8eb71fd8e
-SPOTIFY_CLIENT_SECRET=806fe01e2ef64f41bdc60633ece89124
+TELEGRAM_BOT_TOKEN=8272825150:AAFSd6oG_06pieJI3v2fLWjAb35QAd_tMZY
