--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-numpy
-pandas
-matplotlib
-scikit-learn
-torch
-torchvision
-torchaudio
-notebook
-jupyterlab
-tqdm
-python-dotenv
-spotipy
-python-telegram-bot==20.7
-aiohttp
-python-dateutil
+numpy==1.26.2
+pandas==2.1.4
+matplotlib==3.8.2
+scikit-learn==1.3.2
+notebook==7.0.6
+jupyterlab==4.0.9
+tqdm==4.66.1
+python-dotenv==1.0.0
+spotipy==2.23.0
+python-telegram-bot==21.9
+aiohttp==3.9.1
+python-dateutil==2.8.2
