--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+numpy
+pandas
+matplotlib
+scikit-learn
+torch
+torchvision
+torchaudio
+notebook
+jupyterlab
+tqdm
+python-dotenv
+spotipy
 python-telegram-bot==20.7
-pandas==2.0.3
-python-dotenv==1.0.0
-numpy==1.24.3
-torch==2.0.1
-scikit-learn==1.3.0
-matplotlib==3.7.2
+aiohttp
+python-dateutil
